--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,10 @@ ul {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .modal {
   position: absolute;
@@ -234,11 +237,41 @@ width: 408px;
 min-height: 576px;
 left: 50%;
 top: 50%;
-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%) scale(1);
+padding: 32px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 background-color: var(--modal-color);
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.4);
+}
+
+
+.close-btn {
+  border-radius: 100%;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  display: block;
+  margin-left: auto;
+  cursor: pointer;
+
+  background-color: var(--footer-color-text);
+border: 1px solid rgba(0, 0, 0, 0.1);
+
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 /* features */
