--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@
   --footer-soc-icons: #31d0aa;
   --modal-color: #FCFCFC;
 }
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: var(--main-color-text);
@@ -136,7 +141,26 @@ ul {
     display: block;
     background-color: var(--hover-color);
     border-radius: 2px;
+    animation-name: currentanimation;
+    animation-duration: 250ms;
+    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    animation-delay: 0;
     
+}
+
+@keyframes currentanimation {
+  0% {
+    transform: scaleX(0);
+  }
+
+  100% {
+    transform: scaleX(1);
+    }
+}
+
+
+.current {
+  color: var(--hover-color);
 }
 
 .nav-link:hover,
@@ -223,6 +247,7 @@ ul {
   position: fixed;
   top: 0;
   left: 0;
+  opacity: 1;
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
@@ -238,7 +263,6 @@ min-height: 576px;
 left: 50%;
 top: 50%;
 transform: translate(-50%, -50%) scale(1);
-padding: 32px;
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 background-color: var(--modal-color);
@@ -252,12 +276,13 @@ border-radius: 4px;
 
 
 .close-btn {
-  border-radius: 100%;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
   width: 24px;
   height: 24px;
   padding: 0;
-  display: block;
-  margin-left: auto;
   cursor: pointer;
 
   background-color: var(--footer-color-text);
@@ -620,12 +645,14 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #F4F4FD;
 top: 0;
+left: 0;
 height: 100%;
+width: 100%;
 background-color: var(--actient-color-);
 padding-left: 32px;
 padding-right: 32px;
 padding-top: 40px;
-transform: translateY(100%);
+transform: translateY(101%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .img-back {
